# chess

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  meson.build
include/: bitboard.h  castling.h  fen.h  move.h  piece.h  position.h  types.h  zobrist.h
src/: castling.c  fen.c  main.c  meson.build  move.c  piece.c  position.c  zobrist.c
test/: conversions.c  fen.c  meson.build  moves.c  test.h
